Update docs, improve code
